--- a/hairdresser-app/pom.xml
+++ b/hairdresser-app/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.endev</groupId>
-	<artifactId>hairdresser-app</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>hairdresser-app</name>
+	<artifactId>hairdresser-atelier</artifactId>
+	<version>0.0.1</version>
+	<name>hairdresser-atelier</name>
 	<description>Application that allows to manage hairdresser atelier.</description>
 
 	<properties>
@@ -22,6 +22,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
